bash-tools/kubernetes-configs/namespace.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: [% DATE  # 2020-02-16 18:40:53 +0000 (Sun, 16 Feb 2020) %]
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# ============================================================================ #
#                               N a m e s p a c e
# ============================================================================ #

# https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/

# https://kubernetes.io/docs/tasks/administer-cluster/namespaces-walkthrough/

# https://kubernetes.io/docs/reference/kubernetes-api/cluster-resources/namespace-v1/

---
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE # eg. myapp
  labels:
    # "true" must be string, otherwise gets
    #  The request is invalid: patch: Invalid value: "map[metadata:map[labels:map[app.kubernetes.io/instance:<nil> goldilocks.fairwinds.com/enabled:true] resourceVersion:24479876]]": unrecognized type: string
    goldilocks.fairwinds.com/enabled: "true"
