bash-tools/kubernetes-configs/init-container-fix.patch.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: 2021-02-25 14:53:44 +0000 (Thu, 25 Feb 2021)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn and optionally send me feedback to help steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# Quick initContainers fix patch that can be applied via Kustomize to any matching Deployment / StatefulSet
# just by adding this filename to kustomize.yaml's patchesStrategicMerge section

---
apiVersion: apps/v1
kind: Deployment
#kind: StatefulSet
metadata:
  # XXX: Edit
  name: NAME
  annotations:
    checkov.io/skip1: CKV_K8S_21=breaks kustomize patching of base
  #namespace: NAMESPACE
spec:
  template:
    spec:
      #securityContext:
        #runAsUser: 0   # not recommended
        #fsGroup: 1000   # group to own volumeMounts so they can be written to by the user-level process
