bash-tools/kubernetes-configs/service-manual-endpoints.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: 2019-11-25 13:47:16 +0000 (Mon, 25 Nov 2019)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# ============================================================================ #
#            S e r v i c e   w i t h   m a n u a l   e n d p o i n t
# ============================================================================ #

# https://kubernetes.io/docs/concepts/services-networking/service/

# You'll rarely create endpoints yourself, usually let the service manage the endpoint for you

# combine with endpoints.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: NAME
  namespace: NAMESPACE
  labels:
    app: APP
spec:
  ports:
    - port: 80
      targetPort: 80
